test/visibility/only/badName.good
badName.chpl:12: In module 'M':
badName.chpl:13: error: cannot use 'only' clause with symbol 'd' as it is not defined in 'Foo'
